# django-coursework

./: README.md  blog_data.json  clients_data.json  newsletter_data.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_image.py
blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  base.html  blog_main_page.html
clients/: admin.py  custom_mixins.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_clients_cli_last_na_392efd_idx.py
clients/templates/clients/: base.html  client_confirm_delete.html  client_create_form.html  client_detail.html  client_list.html  client_update_form.html
config/: settings.py  urls.py
newsletter/: admin.py  apps.py  custom_mixins.py  forms.py  models.py  newsletter_scheduler.py  services.py  urls.py  views.py
newsletter/management/commands/: run_sender.py
newsletter/migrations/: 0001_initial.py
newsletter/templates/newsletter/: distributionattempt_list.html  main_page.html  message_confirm_delete.html  message_create_form.html  message_detail.html  message_update_form.html  newsletter_confirm_delete.html  newsletter_create_form.html  newsletter_detail.html  newsletter_list.html  newsletter_update_form.html  recipients_list.html
static/js/: color-modes.js
users/: forms.py  models.py  token_generator.py  urls.py  views.py
users/management/commands/: createmanager.py  createmanagergroup.py  createusersgroup.py
users/migrations/: 0001_initial.py  0002_remove_user_phone_number.py
(+12 files in other folders)
