[tool.poetry]
name = "django-coursework"
version = "0.1.0"
description = ""
authors = ["\"RocketMenace\""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
black = "^24.8.0"
django-debug-toolbar = "4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
